package com.ubb.locexchange.domain;

public enum Role {

    CLIENT,
    PROVIDER

}
