package com.ubb.locexchange.domain;

public enum UserStatus {

    CONNECTED,
    IN_MISSION,
    DISCONNECTED;

}
