@startuml

enum UserStatus
enum Role
class User
class Address

User o-- Role
User *-- Address
User o-- UserStatus

class User {
-String id
-String webSessionId
-String username
-String firstName
-String lastName
-Role role
-Address address
-GeoJsonPoint location
-UserStatus userStatus
}

class Address {
-String id
-String country
-String city
-String street
-int number
-int apartmentNumber
}

enum Role {
    PROVIDER
    CLIENT
}

enum UserStatus {
    CONNECTED
    IN_MISSION
    DISCONNECTED
}

@enduml